@@ -1,3 +1,9 @@
+TAG: lib_py_littriage-6-0-15-2
+DATE: 03/10/2020
+STAFF: lec
+PdfParser.py
+TR13279/JCI & REP (Reproduction)
+
 TAG: lib_py_littriage-6-0-15-1
 DATE: 02/05/2020
 STAFF: lec
